<resources>
    <string name="app_name">DLBPInfo5126Project</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register new user</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_user">Welcome new user</string>
    <string name="problem">Problem creating account</string>
    <string name="logout">Logout</string>
    <string name="logged_out">You are now logged out</string>
    <string name="no_account">Do not have an account, Register </string>
    <string name="here">Here</string>
    <string name="project_name">NY Times Article Central</string>
    <string name="search">Search</string>
    <string name="keyword">Keyword</string>
    <string name="noKeyword">No Keyword for Input</string>
    <string name="keywordRe">Getting Top 10 Results for: </string>
    <string name="noResults">No Results Found</string>
    <string name="addDataInfo">Adding Articles to Database</string>
    <string name="addDataInfoFail">Database insert failed</string>
    <string name="emptyList">No Data in List</string>
    <string name="emptyDatabase">No Data in Database</string>
    <string name="readDataInfo1">Getting Articles of: \"</string>
    <string name="readDataInfo2">\" From Database</string>
    <string name="readDataInfoFail">Database read failed</string>
    <string name="nextArticle">Next Article</string>
    <string name="previousArticle">Previous Article</string>
    <string name="credits">Credits</string>
    <string name="add_data">Add Data</string>
    <string name="read_data">Read Data</string>
    <string name="homeAct">Return to Home</string>
    <string name="description">Description:</string>
    <string name="descriptionText">Takes in a keyword and gets a list of 10 articles.
        Articles can be switched by pressing the \"Previous Article\" and \"Next Article\"
    buttons. The \"Add Data\" button sends the list to the Firebase database and the
    \"Read Data\" button fills the current list with the data in the Firebase database</string>
    <string name="groupMembers">Group Members:</string>
    <string name="groupMembersNames">Darrell Lim, Bhavin Patel</string>
</resources>